# aubo_ros_driver

./: README.md
aubo_dashboard_msgs/: CMakeLists.txt  package.xml
aubo_dashboard_msgs/action/: SetMode.action
aubo_dashboard_msgs/msg/: RobotMode.msg  SafetyMode.msg
aubo_gazebo/controller/: arm_controller_aubo_i5.yaml
aubo_gazebo/launch/: aubo_bringup.launch
aubo_moveit_config/: .setup_assistant  package.xml
aubo_moveit_config/config/: aubo.srdf  aubo_C3.srdf  fake_controllers.yaml  gazebo_aubo_i5.urdf  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
aubo_moveit_config/launch/: aubo_moveit_controller_manager.launch.xml  aubo_upload.launch  chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
aubo_msgs/: CMakeLists.txt  package.xml
aubo_planning/: CMakeLists.txt  package.xml
aubo_planning/launch/: aubo_planning_demo.launch
aubo_planning/src/: test_custom.cpp
aubo_robot_driver/: .gitignore  CMakeLists.txt  hardware_interface_plugin.xml  package.xml
aubo_robot_driver/config/: aubo_i5_controllers.yaml
aubo_robot_driver/doc/: ros 驱动 ur 过程分析（kinetic）.xmind  ros 驱动 ur 过程分析（melodic).xmind  work_plan.md
aubo_robot_driver/include/: aubo_client.h  aubo_hardware_interface.h
aubo_robot_driver/launch/: aubo_bringup.launch  aubo_common.launch  aubo_control.launch
aubo_robot_driver/src/: aubo_client.cpp  aubo_client_node.cpp  aubo_hardware_interface.cpp  aubo_robot_driver_node.cpp
