<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>aubo_robot_driver</name>
  <version>2.1.2</version>
  <description>The new driver for Aubo Robots i5 series.</description>
  <author>liuming</author>
  <maintainer email="lm18816211581@163.com">Felix Exner</maintainer>
  <license>Apache-2.0</license>
  <license>BSD-2-Clause</license>
  <license>Zlib</license>

  <url type="website">http://wiki.ros.org/aubo_robot_driver</url>
  <url type="bugtracker">http://git.aubo-robotics.cn:8001/arcs/aubo_ros_driver/-/issues</url>
  <url type="repository">http://git.aubo-robotics.cn:8001/arcs/aubo_ros_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>industrial_robot_status_interface</build_depend>

  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>kdl_parser</depend>
  <depend>pass_through_controllers</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>scaled_joint_trajectory_controller</depend>
  <depend>sensor_msgs</depend>
  <depend>speed_scaling_interface</depend>
  <depend>speed_scaling_state_controller</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf</depend>
  <depend>trajectory_msgs</depend>
  <depend>aubo_dashboard_msgs</depend>
  <depend>aubo_msgs</depend>

  <exec_depend>cartesian_trajectory_controller</exec_depend>
  <exec_depend>force_torque_sensor_controller</exec_depend>
  <exec_depend>industrial_robot_status_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>socat</exec_depend>
  <exec_depend>twist_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  
  <export>
    <hardware_interface plugin="${prefix}/hardware_interface_plugin.xml" />
    <rosdoc config="doc/rosdoc.yaml" />
  </export>


</package>
